overflow hidden on header fix

--- a/public/style.css
+++ b/public/style.css
@@ -45,6 +45,7 @@ footer {
   top: 0;
   width: 100%;
   align-items: center;
+  overflow: hidden; 
 }
 
 .header {
